# nppes

./: Cargo.toml  README.md
benches/: nppes_benchmark.rs
src/: analytics.rs  config.rs  data_types.rs  dataset.rs  download.rs  error.rs  export.rs  lib.rs  reader.rs  schema.rs
tests/: integration_schema_validation.rs
