[package]
name = "nppes"
version = "0.0.4"
edition = "2024"
authors = ["Nikolas Yanek-Chrones <research@icarai.io>"]
description = "A Rust library for parsing, querying, and exporting NPPES healthcare provider data."
repository = "https://github.com/nikothomas/nppes"
license = "MIT OR Apache-2.0"
keywords = ["nppes", "healthcare", "npi", "provider", "data"]
categories = ["data-structures", "parser-implementations"]

[[bin]]
name = "npcli"
path = "src/bin/cli.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"

# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# Progress reporting and parallelism
indicatif = "0.17"
rayon = "1.10"

# Error handling enhancements
thiserror = "2.0"
anyhow = "1.0"

# Configuration
config = "0.15"
directories = "6.0"
toml = "0.8"
lazy_static = "1.5"

# HTTP client and ZIP extraction (optional)
reqwest = { version = "0.12", optional = true, features = ["stream"] }
tokio = { version = "1.0", optional = true, features = ["rt-multi-thread", "macros", "fs"] }
zip = { version = "4", optional = true }
tempfile = { version = "3.10", optional = true }
futures-util = { version = "0.3", optional = true }

# Optional dependencies for exports
polars = { version = "0.48", optional = true, features = ["lazy", "csv", "json", "parquet"] }
arrow = { version = "55", optional = true }
parquet = { version = "55", optional = true }

# Indexing and search (optional)
tantivy = { version = "0.24", optional = true }

[features]
default = ["progress", "parallel"]
progress = []
parallel = []
dataframe = ["polars"]
arrow-export = ["arrow", "parquet"]
full-text-search = ["tantivy"]
download = ["reqwest", "tokio", "zip", "tempfile", "futures-util"]
all = ["progress", "parallel", "dataframe", "arrow-export", "full-text-search", "download"]

[dev-dependencies]
tempfile = "3.10"
criterion = "0.6"
tokio-test = "0.4.4"

[[bench]]
name = "nppes_benchmark"
harness = false

